force-app/main/default/objects/Winner__c/Winner__c.object-meta.xml
<CustomObject>
    <label>Winner</label>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>Participant ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Winners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>