force-app/main/default/objects/Winner__c/fields/Certificate__c.field-meta.xml
<CustomField>
    <fullName>Certificate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certificate</label>
    <referenceTo>Certificate__c</referenceTo>
    <relationshipLabel>Winners</relationshipLabel>
    <relationshipName>Winners</relationshipName>
    <type>Lookup</type>
</CustomField>