force-app/main/default/objects/Winner__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant</label>
    <referenceTo>Participant__c</referenceTo>
    <relationshipLabel>Winners</relationshipLabel>
    <relationshipName>Winners</relationshipName>
    <type>Lookup</type>
</CustomField>