force-app/main/default/objects/Winner__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WInner</fullName>
            </value>
            <value>
                <fullName>Runner-up</fullName>
            </value>
            <value>
                <fullName>Second Runner-up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>